--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -138,6 +138,12 @@
                         <!-- jhipster-needle-add-element-to-admin-menu - JHipster will add entities to the admin menu here -->
                     </ul>
                 </li>
+                <li ng-class="{active: vm.$state.includes('about')}">
+                    <a ui-sref="about" ng-click="vm.collapseNavbar()">
+                        <span class="glyphicon glyphicon-baby-formula"></span>
+                        <span class="hidden-sm" data-translate="global.menu.about">About</span>
+                    </a>
+                </li>
                 <li ui-sref-active="active" uib-dropdown class="dropdown pointer" ng-controller="JhiLanguageController as languageVm">
                     <a class="dropdown-toggle" uib-dropdown-toggle href="" ng-if="languageVm.languages.length > 1">
                         <span>
