--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -9,7 +9,7 @@
             </button>
             <a class="navbar-brand logo" href="#/" ng-click="vm.collapseNavbar()">
                 <img class="logo-img" src="content/images/logo-jhipster.png"/>
-                <span data-translate="global.title">Viaikea</span> <span class="navbar-version">v{{VERSION}}</span>
+                <!--<span data-translate="global.title">Viaikea</span> <span class="navbar-version">v{{VERSION}}</span>-->
             </a>
         </div>
         <div class="navbar-collapse" uib-collapse="vm.isNavbarCollapsed" ng-switch="vm.isAuthenticated()">
@@ -35,55 +35,55 @@
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
-                <li ng-class="{active: vm.$state.includes('account')}" uib-dropdown class="dropdown pointer">
-                    <a class="dropdown-toggle" uib-dropdown-toggle href="" id="account-menu">
-                        <span>
-                            <span class="glyphicon glyphicon-user"></span>
-                            <span class="hidden-sm" data-translate="global.menu.account.main">
-                                Account
-                            </span>
-                            <b class="caret"></b>
-                        </span>
-                    </a>
-                    <ul class="dropdown-menu" uib-dropdown-menu>
-                        <li ui-sref-active="active" ng-switch-when="true">
-                            <a ui-sref="settings" ng-click="vm.collapseNavbar()">
-                                <span class="glyphicon glyphicon-wrench"></span>&nbsp;
-                                <span data-translate="global.menu.account.settings">Settings</span>
-                            </a>
-                        </li>
-                        <li ui-sref-active="active" ng-switch-when="true">
-                            <a ui-sref="password" ng-click="vm.collapseNavbar()">
-                                <span class="glyphicon glyphicon-lock"></span>&nbsp;
-                                <span data-translate="global.menu.account.password">Password</span>
-                            </a>
-                        </li>
-                        <li ui-sref-active="active" ng-switch-when="true">
-                            <a ui-sref="sessions" ng-click="vm.collapseNavbar()">
-                                <span class="glyphicon glyphicon-cloud"></span>&nbsp;
-                                <span data-translate="global.menu.account.sessions">Sessions</span>
-                            </a>
-                        </li>
-                        <li ui-sref-active="active" ng-switch-when="true">
-                            <a href="" ng-click="vm.logout()" id="logout">
-                                <span class="glyphicon glyphicon-log-out"></span>&nbsp;
-                                <span data-translate="global.menu.account.logout">Sign out</span>
-                            </a>
-                        </li>
-                        <li ui-sref-active="active" ng-switch-when="false">
-                            <a href="" ng-click="vm.login()" id="login">
-                                <span class="glyphicon glyphicon-log-in"></span>&nbsp;
-                                <span data-translate="global.menu.account.login">Sign in</span>
-                            </a>
-                        </li>
-                        <li ui-sref-active="active" ng-switch-when="false">
-                            <a ui-sref="register" ng-click="vm.collapseNavbar()">
-                                <span class="glyphicon glyphicon-plus-sign"></span>&nbsp;
-                                <span data-translate="global.menu.account.register">Register</span>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
+                <!--<li ng-class="{active: vm.$state.includes('account')}" uib-dropdown class="dropdown pointer">-->
+                    <!--<a class="dropdown-toggle" uib-dropdown-toggle href="" id="account-menu">-->
+                        <!--<span>-->
+                            <!--<span class="glyphicon glyphicon-user"></span>-->
+                            <!--<span class="hidden-sm" data-translate="global.menu.account.main">-->
+                                <!--Account-->
+                            <!--</span>-->
+                            <!--<b class="caret"></b>-->
+                        <!--</span>-->
+                    <!--</a>-->
+                    <!--<ul class="dropdown-menu" uib-dropdown-menu>-->
+                        <!--<li ui-sref-active="active" ng-switch-when="true">-->
+                            <!--<a ui-sref="settings" ng-click="vm.collapseNavbar()">-->
+                                <!--<span class="glyphicon glyphicon-wrench"></span>&nbsp;-->
+                                <!--<span data-translate="global.menu.account.settings">Settings</span>-->
+                            <!--</a>-->
+                        <!--</li>-->
+                        <!--<li ui-sref-active="active" ng-switch-when="true">-->
+                            <!--<a ui-sref="password" ng-click="vm.collapseNavbar()">-->
+                                <!--<span class="glyphicon glyphicon-lock"></span>&nbsp;-->
+                                <!--<span data-translate="global.menu.account.password">Password</span>-->
+                            <!--</a>-->
+                        <!--</li>-->
+                        <!--<li ui-sref-active="active" ng-switch-when="true">-->
+                            <!--<a ui-sref="sessions" ng-click="vm.collapseNavbar()">-->
+                                <!--<span class="glyphicon glyphicon-cloud"></span>&nbsp;-->
+                                <!--<span data-translate="global.menu.account.sessions">Sessions</span>-->
+                            <!--</a>-->
+                        <!--</li>-->
+                        <!--<li ui-sref-active="active" ng-switch-when="true">-->
+                            <!--<a href="" ng-click="vm.logout()" id="logout">-->
+                                <!--<span class="glyphicon glyphicon-log-out"></span>&nbsp;-->
+                                <!--<span data-translate="global.menu.account.logout">Sign out</span>-->
+                            <!--</a>-->
+                        <!--</li>-->
+                        <!--<li ui-sref-active="active" ng-switch-when="false">-->
+                            <!--<a href="" ng-click="vm.login()" id="login">-->
+                                <!--<span class="glyphicon glyphicon-log-in"></span>&nbsp;-->
+                                <!--<span data-translate="global.menu.account.login">Sign in</span>-->
+                            <!--</a>-->
+                        <!--</li>-->
+                        <!--<li ui-sref-active="active" ng-switch-when="false">-->
+                            <!--<a ui-sref="register" ng-click="vm.collapseNavbar()">-->
+                                <!--<span class="glyphicon glyphicon-plus-sign"></span>&nbsp;-->
+                                <!--<span data-translate="global.menu.account.register">Register</span>-->
+                            <!--</a>-->
+                        <!--</li>-->
+                    <!--</ul>-->
+                <!--</li>-->
                 <li ng-class="{active: vm.$state.includes('admin')}"  ng-switch-when="true" has-authority="ROLE_ADMIN" uib-dropdown class="dropdown pointer">
                     <a class="dropdown-toggle" uib-dropdown-toggle href="" id="admin-menu">
                         <span>
